--- a/frontend/src/loginpage/style.css
+++ b/frontend/src/loginpage/style.css
@@ -9,70 +9,35 @@ body {
   overflow: hidden; /* Prevent scrolling */
 }
 
-.mdc-layout-grid {
-  width: 100%;
-  height: 100%; /* Fill entire viewport */
-  margin: 0 auto;
+/* styles.css */
+
+.home-header {
+  padding-left: 2rem;
 }
 
-.mdc-layout-grid__inner {
+.card-container {
   display: flex;
-  height: 100%; /* Fill entire viewport */
+  flex-wrap: wrap;
+  justify-content: center;
+  padding:0.5rem;
 }
 
-.mdc-layout-grid__cell {
-  padding: 16px;
-  box-sizing: border-box;
-  border: 1px solid #e0e0e0;
-  height: 100%; /* Fill entire viewport */
-  overflow: auto; /* Allow content to scroll within cells */
-}
-
-/* Adjust grid cell spans for different screen sizes */
-@media (max-width: 767px) {
-  .mdc-layout-grid__cell--span-3,
-  .mdc-layout-grid__cell--span-9 {
-    width: 100%;
-  }
-}
-
-@media (min-width: 768px) {
-  .mdc-layout-grid__cell--span-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
-  }
-
-  .mdc-layout-grid__cell--span-9 {
-    flex: 0 0 75%;
-    max-width: 75%;
-  }
-}
-
-/* Styling for SideNav */
-/* You need to add your own styles or use Material Design icons */
-.sidenav {
-  background-color: #f0f0f0;
-}
-
-/* Styling for Content */
-.content {
+.card {
+  width: calc(25% - 20px); /* Adjust width of each card */
+  margin: 10px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
 }
 
-/* Responsive styles */
-@media (max-width: 767px) {
-  .mdc-layout-grid__cell {
-    height: auto; /* Reset height for smaller screens */
-  }
+.card-content {
+  padding: 16px;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
+.card h2 {
+  margin-top: 0;
 }
 
-th, td {
-  border: 1px solid black;
-  padding: 8px;
-  text-align: center;
+.card p {
+  margin-bottom: 0;
 }
